# Evidune

./: .editorconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  commitlint.config.cjs  install.sh  pyproject.toml  tasks.md
.cursor/rules/: repository-ai-collab.mdc
.github/workflows/: ci.yml
adapters/: generic_csv.py
agent/: codex_auth.py  core.py  fact_extractor.py  iteration_harness.py  llm.py  pattern_detector.py  self_evaluator.py  signal_collector.py  skill_feedback.py  skill_synthesizer.py  title_generator.py  utils.py
agent/harness/: __init__.py  delivery.py  maintenance.py  models.py  profiles.py  runtime.py  swarm.py  validation.py
agent/llm/: __init__.py  anthropic.py  base.py  codex.py  factory.py  local.py  openai.py
agent/tools/: __init__.py  base.py  external.py  harness_tools.py  identity_tools.py  internal.py  registry.py
channels/: base.py  feishu.py  stdout.py
core/: __init__.py  analyzer.py  config.py  docs_lint.py  git_ops.py  iteration_harness.py  iteration_helpers.py  iteration_history.py  loop.py  metrics.py  project_init.py  runtime_paths.py  runtime_tools.py  updater.py
docs/: architecture.md  index.md  quality-score.md  reliability.md  tech-debt.md
docs/exec-plans/active/: README.md  skill-iteration-closure.md
docs/exec-plans/completed/: README.md
docs/product-specs/: conversation-mode.md  index.md  outcome-governance.md  self-management-tools.md  skill-iteration.md  swarm-harness.md
docs/references/: developer-preview-smoke.md  index.md  local-iteration.md
examples/agent/: evidune.deploy.yaml  evidune.yaml
examples/agent/data/: task-metrics.csv
examples/content/: evidune.deploy.yaml  evidune.yaml
examples/content/data/: content-metrics.csv
examples/zhihu/: aiflay.yaml  evidune.yaml
gateway/: base.py  cli.py  feishu_bot.py  feishu_support.py  router.py  web.py
identities/: __init__.py  loader.py  registry.py
memory/: rows.py  schema.py  store.py  store_models.py
personas/: loader.py  registry.py
scripts/: smoke_emergence.py  smoke_tools.py
skills/: evaluation.py  loader.py  models.py  registry.py
tests/: conftest.py  test_adapters.py  test_agent.py  test_agent_emergence.py  test_agent_fact_extraction.py  test_agent_titling.py  test_channels.py  test_codex_auth.py  test_config.py  test_docs_lint.py  test_fact_extractor.py  test_gateway.py  test_harness.py  test_harness_cli.py  test_harness_runtime.py  test_identities.py  test_init.py  test_llm_factory.py  test_loop.py  test_memory.py  test_memory_namespace.py  test_pattern_detector.py  test_personas.py  test_repo_constraints.py  test_runtime_tools.py  test_self_evaluator.py  test_signal_collector.py  test_skill_feedback.py  test_skill_iteration.py  test_skill_synthesizer.py  test_skills.py  test_title_generator.py  test_tools.py  test_updater.py  test_web_e2e.py  test_web_feedback.py  web_harness.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: Toast.svelte  (+11 more)
(+30 files in other folders)
