[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiflay"
version = "0.1.0"
description = "Outcome-driven skill self-iteration framework for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yfge", email = "yfge@users.noreply.github.com" },
]
keywords = ["ai", "agent", "skill", "self-iteration", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aiflay = "core.loop:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "channels", "memory", "skills", "agent", "gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
